--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -2,3 +2,11 @@ unit.moth-units-pupa.name = Pupa
 unit.moth-units-pupa.description = Defensive, inactive air unit. Carries a large force shield and heavy armor to resist damage.
 unit.moth-units-hawk.name = Hawk
 unit.moth-units-hawk.description = Extremely agile and dangerous anti-air fighter. Shoots out bolts that severely damage airborne enemies.
+#unit.moth-units-luna.name = Luna
+#unit.moth-units-luna.description = Stealthy infiltrator that fires small sapping bombs at ground targets and lasers at air targets. Can uncover itself to disable a building for one minute.
+#unit.moth-units-polyphemus.name = Polyphemus
+#unit.moth-units-polyphehums.description = Powerful anti-armor fighter. Wields two penetrating lasers that lock onto targets and increase in damage with time. Can also fire a spew of flak against targets in front.
+#unit.moth-units-atlas.name = Atlas
+#unit.moth-units-atlas.description = Covert flagship. Cloaks all allies around it and fires long-range EMP missiles that deal extra damage to power lines. Uses a set of eight spewers to defend itself at medium range.
+#block.moth-units-echo-tower.name = Echo Tower
+#block.moth-units-echo-tower.description = Advanced detection tower that pulses to reveal the location of all concealed enemies in a medium radius. Requires large amounts of power and metaglass to operate.
