--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -2,6 +2,7 @@ unit.moth-units-pupa.name = Pupa
 unit.moth-units-pupa.description = Defensive, inactive air unit. Carries a large force shield and heavy armor to resist damage.
 unit.moth-units-hawk.name = Hawk
 unit.moth-units-hawk.description = Extremely agile and dangerous anti-air fighter. Shoots out bolts that severely damage airborne enemies.
+#upcoming
 #unit.moth-units-luna.name = Luna
 #unit.moth-units-luna.description = Stealthy infiltrator that fires small sapping bombs at ground targets and lasers at air targets. Can uncover itself to disable a building for one minute.
 #unit.moth-units-polyphemus.name = Polyphemus
@@ -10,3 +11,15 @@ unit.moth-units-hawk.description = Extremely agile and dangerous anti-air fighte
 #unit.moth-units-atlas.description = Covert flagship. Cloaks all allies around it and fires long-range EMP missiles that deal extra damage to power lines. Uses a set of eight spewers to defend itself at medium range.
 #block.moth-units-echo-tower.name = Echo Tower
 #block.moth-units-echo-tower.description = Advanced detection tower that pulses to reveal the location of all concealed enemies in a medium radius. Requires large amounts of power and metaglass to operate.
+
+#submarines????
+#unit.moth-units-sixgill.name = Sixgill
+#unit.moth-units-sixgill.description = Concealed submarine that fires anti-ship torpedoes, dealing heavy area damage to naval enemies.
+#unit.moth-units-owstoni.name = Owstoni
+#unit.moth-units-owstoni.description = Concealed submarine that grapples small ships and crushes them, inflicting massive single-target damage. Can also pull itself into enemy buildings for heavy damage, but will itself be hurt in the process.
+#unit.moth-units-cetorhinus.name = Cetorhinus
+#unit.moth-units-cetorhinus.description = Concealed submarine that fires long-range artillery strikes against buildings. Cannot move while firing.
+#unit.moth-units-sphyrindae.name = Sphyrindae
+#unit.moth-units-sphyrindae.description = Concealed war submarine equipped with a wide array of destructive weapons. Can fire heavy torpedoes and small ballistic missiles. Upon reaching low health, enters a frenzy that rams and cuts down anything in the water.
+#unit.moth-units-carcharodon.name = Carcharodon
+#unit.moth-units-carcharodon.description = Submerged nuclear weapons platform of devastation. Uses thorium fed to it to load a nuclear missile, which evaporates anything caught in it, even allies. When under attack, sends shockwaves that paralyse nearby enemies.
