--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -5,7 +5,7 @@ unit.moth-units-hawk.description = Extremely agile and dangerous anti-air fighte
 unit.moth-units-luna.name = Luna
 unit.moth-units-luna.description = Fast infiltrator that fires sapping bombs at ground targets and lasers at air targets.
 unit.moth-units-polyphemus.name = Polyphemus
-unit.moth-units-polyphehums.description = Powerful anti-armor fighter. Wields penetrating lasers that latch onto single targets and increase in damage over time. 
+unit.moth-units-polyphemus.description = Powerful anti-armor fighter. Wields penetrating lasers that latch onto single targets and increase in damage over time. 
 #unit.moth-units-atlas.name = Atlas
 #unit.moth-units-atlas.description = Covert flagship. Cloaks all allies around it and fires long-range EMP missiles that deal extra damage to power lines. Uses a set of eight spewers to defend itself at medium range.
 #block.moth-units-echo-tower.name = Echo Tower
